--- a/discordApi/package.json
+++ b/discordApi/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node discordApi.js",
-    "dev":"nodemon --watch discordApi.js"
+    "dev": "nodemon --watch discordApi.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1"
   }
